fixed table css text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ table,th,td {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 body{
   min-height: 100vh;
@@ -31,10 +32,13 @@ table{
   margin: auto;
   width: 60%;
   padding: 10px;
-  min-width: 400px;
+  min-width: 200px;
   
 }
 .country{
+  padding: 10px;
+  min-width: 200px;
+  text-align: center;
   display: flex;
   justify-content: center;
   flex-direction: column;
